wp-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
