wp-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: wordpress
spec:
  tls:
    - hosts:
      - itechart.telman.io
      secretName: wp-tls
  rules:
  - host: itechart.telman.io
    http:
      paths:
      - backend:
          service:
            name: wordpress-service
            port:
              number: 80
        path: /
        pathType: Prefix
